kuber/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-crud-server-deployment
  labels:
    app: simple-http-crud-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-http-crud-server
  template:
    metadata:
      labels:
        app: simple-http-crud-server
    spec:
      containers:
      - name: simple-http-crud-server
        image: arsenteroganisyan/otus-crud-server:v1
        ports:
        - containerPort: 8000
