kuber/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-http-crud-service
spec:
  type: NodePort
  selector:
    app: simple-http-crud-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
